--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "zugmeister",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --sourceMap=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
